2009-04-03  Tobias Burnus  <burnus@net-b.de>

PR fortran/39594
        * resolve.c (resolve_common_vars): Add FL_VARIABLE to symbol
        if it is not a procedure pointer.
        * primary.c (match_actual_arg): Ditto.

2009-04-03  Tobias Burnus  <burnus@net-b.de>

        PR fortran/39594
        * gfortran.dg/common_12.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@145513 138bc75d-0d04-0410-961f-82ee72b054a4